# trollq

./: CMakeLists.txt  README.md
include/: quote.hpp
src/: main.cpp
